--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-
+A desigualdade social é um dos maiores desafios enfrentados pelas 
+sociedades contemporâneas, configurando-se como um fenômeno complexo 
+que perpassa diversas dimensões da vida humana, como acesso à 
+educação, saúde, moradia e oportunidades de trabalho.
+ Ela se manifesta de maneira mais evidente nas disparidades entre 
+ diferentes grupos socioeconômicos, raciais e regionais, 
+ criando uma hierarquia social que perpetua a exclusão e a 
+ marginalização de grandes parcelas da população. 
+ Essa disparidade não é apenas econômica, mas também cultural e 
+ política, afetando a capacidade de indivíduos e comunidades de 
+ exercerem seus direitos e de alcançarem uma vida digna. 
+ Enquanto a desigualdade social se aprofunda, 
+ gera um ciclo vicioso de pobreza e falta de oportunidades, 
+ onde os mais vulneráveis têm suas chances de ascensão limitadas. 
+ Esse quadro exige reflexão e ação coletiva para que se promovam políticas públicas eficazes e um novo pacto social capaz de garantir a justiça e a igualdade para todos.
